Fix z-index issue with intro text.

--- a/src/components/Styles/Project.scss
+++ b/src/components/Styles/Project.scss
@@ -98,6 +98,7 @@
 					height:40%;
 					width:70%;
 					opacity:0.2;
+					z-index:1;
 					background-size:contain;
 					position:relative;
 					background-position:center;
